--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Candles (Pure CSS Animation)</title>
+  <title>Happy Birthday to Wabi</title>
   
   
   
